--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "no-use-before-define": "off",
+    "no-use-before-define": "warn",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-filename-extension": [
