connect api, errors, save localstorage and navigat

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "no-use-before-define": "warn",
+    "no-use-before-define": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-one-expression-per-line": "off",
     "react/jsx-filename-extension": [
@@ -43,6 +43,12 @@
       }
     ],
     "import/prefer-default-export": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
     "import/extensions": [
       "error",
       "ignorePackages",
